--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -1,6 +1,7 @@
 .contact{
     text-align: center;
     background-color: #ffc4bc;
+    padding-bottom: 3px;
 }
 
 .info{
@@ -38,4 +39,5 @@
     border: none;
     padding: 5px 10px;
     font-size: 16px;
+    font-weight: 600;
 }
