--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,3 +1,26 @@
+.footer{
+    text-align: center;
+    background-color: #efeeff;
+}
+.name{
+    padding: 5px 10px;
+    background-color: #ccc;
+    width: 200px;
+    margin: 0 auto 50px;
+    font-size: 24px;
+    font-weight: 700;
+}
 .social{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+.copy{
+    font-size: 16px;
+    font-weight: 500;
+    background-color: #ccc;
+    width: 60px;
+    margin: 30px auto 0px;
+    padding: 10px;
 }
