--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,13 @@ html,
 body {
   min-height: 100%;
 }
+html{
+  overflow-x: hidden;
+}
 .App {
   max-width: 1200px;
   width: 100%;
-  padding: 0px 15px;
+  padding: 0px;
   margin: 0 auto;
 }
 .wrapper{
