--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -8,3 +8,18 @@
 .logo{
     margin-left: 40px;
 }
+
+@media (max-width: 650px) {
+    .logo{
+        margin-left: 15px;
+    }
+}
+@media (max-width: 355px) {
+    .logo img{
+        width: 40px;
+        height: 40px;
+    }
+    .logo{
+        margin-left: 5px;
+    }
+}
