--- a/src/Components/Header/Nav/Nav.module.css
+++ b/src/Components/Header/Nav/Nav.module.css
@@ -12,3 +12,25 @@
 .nav:hover{
     color: #e6ff39;
 }
+
+@media (max-width: 650px) {
+    .navbar{
+        margin-right: 15px;
+    }
+}
+@media (max-width: 520px) {
+    .nav + .nav{
+        margin-left: 15px;
+    }
+    .nav {
+        font-size: 16px;
+
+    }
+}
+
+@media (max-width: 390px) {
+    .nav{
+        font-size: 14px;
+        /*margin-left: 60px;*/
+    }
+}
