--- a/src/Components/Footer/Social/Social.module.css
+++ b/src/Components/Footer/Social/Social.module.css
@@ -4,5 +4,7 @@
     display: inline-block;
 }
 .socialImg{
-
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
