--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,9 @@ html,
 body {
   min-height: 100%;
 }
-html{
-  overflow-x: hidden;
+body{
+  overflow: hidden;
+  max-width: 100%;
 }
 .App {
   max-width: 1200px;
