--- a/src/Components/MyWorks/Works.module.css
+++ b/src/Components/MyWorks/Works.module.css
@@ -21,4 +21,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    padding: 0px 10px;
+}
+
+@media (max-width: 880px){
+    .items{
+        justify-content: center;
+        width: 100%;
+    }
 }
