--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -6,7 +6,7 @@
     padding: 5px 10px;
     background-color: #ccc;
     width: 200px;
-    margin: 0 auto 50px;
+    margin: 0 auto 40px;
     font-size: 24px;
     font-weight: 700;
 }
@@ -22,6 +22,6 @@
     font-weight: 500;
     background-color: #ccc;
     width: 60px;
-    margin: 30px auto 0px;
-    padding: 10px;
+    margin: 0 auto;
+    padding: 7px 9px 5px;
 }
