--- a/src/Components/MyWorks/Work/Work.module.css
+++ b/src/Components/MyWorks/Work/Work.module.css
@@ -1,18 +1,18 @@
 .work{
     display: inline-block;
     border: 2px solid #000;
-    max-width: 400px;
+    max-width: 800px;
     width: 100%;
-    padding: 10px 40px;
+    padding: 10px 20px;
     background-color: #fff;
 }
 
 .img{
     position: relative;
     border: 1px solid #000;
-    width: 300px;
-    height: 300px;
-    margin: 0 auto 30px;
+    width: 250px;
+    height: 200px;
+    margin: 0 auto 5px;
     background-color: #fff6d6;
     transition: all .3s;
 }
@@ -25,12 +25,12 @@
 
 .btn{
     position: absolute;
-    top: 130px;
+    top: 50%;
     left: 25%;
     right: 25%;
     font-size: 18px;
     font-weight: 400;
-    background-color: #ccc;
+    background-color: #b1bccc;
     padding: 10px 20px;
     display: none;
 }
@@ -54,22 +54,12 @@
     font-weight: 400;
     line-height: 20px;
     text-align: left;
-    padding: 10px 0px 20px 10px;
+    padding: 10px 0px 11px 10px;
 }
 
 @media (max-width: 880px){
     .item{
         width: 100%;
         margin-bottom: 30px;
-    }
-    .img{
-        width: 250px;
-        height: 250px;
-    }
-}
-
-@media (max-width: 555px) {
-    .work{
-        padding: 10px 20px;
     }
 }
